--- a/src/app/modules/elements/modules/md-component/md-component.component.html
+++ b/src/app/modules/elements/modules/md-component/md-component.component.html
@@ -31,7 +31,7 @@
         <markdown
           lineNumbers
           [start]="5"
-          src="/assets/docs/main/component.md">
+          src="assets\docs\main\component.md">
           </markdown>
       </div>
     </div>
